[package]
name = "portcache"
version = "0.4.0"
edition = "2024"

[dependencies]
blake2 = "0.10.6"
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.31"
futures-core = "0.3.31"
git2 = "0.20.2"
hex = "0.4.3"
reqwest = { version = "0.12.15", features = ["stream"] }
rocket = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["fs", "io-util", "process", "signal", "time"] }
tokio-util = "0.7.15"
toml = "0.8.22"
walkdir = "2.5.0"
